--- a/wild-space-ui/src/components/GameCanvas/GameCanvas.css
+++ b/wild-space-ui/src/components/GameCanvas/GameCanvas.css
@@ -14,6 +14,15 @@
     width: 50px;
     background-color: blue;
     position: absolute;
-    margin-top: -150px;
-    margin-left: 100px;
+    left: 550px;
+    top: 350px;
+    z-index: 1;
+}
+
+.interface {
+    height: 150px;
+    width: 150px;
+    background-color: grey;
+    position: absolute;
+    z-index: 5;
 }
