--- a/wild-space-ui/src/components/Ground/Ground.css
+++ b/wild-space-ui/src/components/Ground/Ground.css
@@ -1,6 +1,6 @@
 .ground {
-    width: 100%;
-    height: 100%;
+    width: 1000px;
+    height: 800px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
