Автоподстройка положения объектов.

--- a/wild-space-ui/src/components/Ground/Ground.css
+++ b/wild-space-ui/src/components/Ground/Ground.css
@@ -1,6 +1,6 @@
 .ground {
-    width: 1000px;
-    height: 800px;
+    width: 90vh;
+    height: 100vh;
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
