--- a/wild-space-ui/src/index.css
+++ b/wild-space-ui/src/index.css
@@ -9,6 +9,6 @@ html, body {
     display: flex;
     justify-content: center; /* Центрирование по горизонтали */
     align-items: center; /* Центрирование по вертикали */
-    height: 100vh;
     background-color: #A7E6F3;
+    background-image: url("./assets/space-sky.png");
 }
