--- a/wild-space-ui/src/components/GameCanvas/GameCanvas.css
+++ b/wild-space-ui/src/components/GameCanvas/GameCanvas.css
@@ -1,18 +1,15 @@
-.game-canvas {
-    width: 100%;
-    height: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.game-canvas{
+    position: relative;
+    width: 352px;
+    height: 198px;
 }
 
 .interface {
-    height: 150px;
-    width: 150px;
+    height: 100px;
+    width: 100px;
     background-color: grey;
     position: absolute;
     z-index: 10;
+    left: 126px;
+    top: 20%;
 }
