--- a/wild-space-ui/src/index.css
+++ b/wild-space-ui/src/index.css
@@ -1,14 +1,29 @@
-html, body {
+* {
+    box-sizing: border-box;
+}
+
+body {
+    background-color: #333;
     padding: 0;
     margin: 0;
     overflow: hidden;
-    image-rendering: pixelated; /*добавляем пиксельную обработку*/
 }
 
 #root {
-    display: flex;
-    justify-content: center; /* Центрирование по горизонтали */
-    align-items: center; /* Центрирование по вертикали */
-    background-color: #A7E6F3;
+    position: relative;
+    width: 352px;
+    height: 198px;
+    margin: 0 auto;
+    outline: 0.5px solid white;
+    transform: scale(4) translateY(50%);
+    background-color: #00001F;
     background-image: url("./assets/space-sky.png");
+    background-size: contain;
+}
+
+#root .game-canvas {
+    image-rendering: pixelated;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
 }
