--- a/wild-space-ui/src/components/GameObject/GameObject.css
+++ b/wild-space-ui/src/components/GameObject/GameObject.css
@@ -5,13 +5,12 @@
 
 .interactable-object {
     font-size: 3px;
-    margin-top: -10px;
+    margin-top: -5px;
     color: white;
     text-align: center;
-    width: 20px;
     font-weight: 600;
 }
 
-.non-interactable-object {
+.none-interactable-object {
     visibility: collapse;
 }
